--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,18 +13,18 @@
       integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../public/css/index.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <title>
       Online Courses - Learn Anything On Your Schedule | MNP Courses
     </title>
-    <link rel="shortcut icon" href="../public/assets/images/logo-images.svg" />
+    <link rel="shortcut icon" href="/assets/images/logo-images.svg" />
   </head>
   <body>
     <!-- Header -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
       <div class="container">
         <a href="#" class="navbar-branch">
-          <img src="../public/assets/images/logo.svg" width="160px" />
+          <img src="/assets/images/logo.svg" width="160px" />
         </a>
         <button
           class="navbar-toggler"
@@ -71,7 +71,7 @@
 
     <!-- Detail about Website -->
     <div class="introduce-website">
-      <img src="../public/assets/images/Introduce Website.jpg" width="100%">
+      <img src="/assets/images/Introduce Website.jpg" width="100%">
       <div>
         <h1>Get early access, now</h1>
         <span>Be first for our free learning course, and get courses from $9.99.</span>
@@ -88,16 +88,55 @@
         </ul>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="../public/assets/images/Course1.jpg" alt="">
+            <img class="d-block w-100" src="/assets/images/Course1.jpg" alt="">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="../public/assets/images/Course2.jpg" alt="">
+            <img class="d-block w-100" src="/assets/images/Course2.jpg" alt="">
           </div>
         </div>
       </div>
     </div>
 
-
+    <div class="courses-group container mt-5 mb-5">
+      <div class="courses-group-title row">
+        <span>Top Courses</span>
+      </div>
+      <div class="courses-row row d-flex justify-content-between">
+        <% for(let i = 0; i < 5; i++){ %>
+          <div class="courses-item col">
+            <a href="#">
+              <div class="courses-item-img">
+                <img src="<%= data[i].imgPath %>" alt="" width="100%">
+                <div></div>
+              </div>
+              <div class="courses-item-title">
+                <%= data[i].title %>
+              </div>
+              <div class="courses-item-lectures">
+                <%= data[i].lectures %> 
+              </div>
+              <div class="courses-item-star">
+                <%= data[i].star %>
+                <% for(let j = 1; j <= Math.floor(data[i].star); j++) { %>
+                  <i class="fa fa-star"></i>
+                <% } %>
+                <% if(data[i].star - Math.floor(data[i].star) !== 0) { %>
+                  <i class="fa fa-star-half-alt"></i>
+                <% } %>
+                <% for(let j = Math.ceil(data[i].star); j < 5; j++) { %>
+                  <i class="far fa-star"></i>
+                <% } %>
+                 (<%= data[i].view %>)
+              </div>
+              <div class="courses-item-price">
+                <%= data[i].price %> <span>$129.99</span>
+              </div>
+            </a> 
+          </div>
+        <% } %>
+        %>
+      </div>
+    </div>
 
     <!-- Courses -->
     <div class="courses-group container mt-5 mb-5">
@@ -584,7 +623,7 @@
       </div>
       <div class="row footer-logo d-flex justify-content-between">
         <div>
-          <img src="../public/assets/images/logo-images.svg" width="50px">
+          <img src="/assets/images/logo-images.svg" width="50px">
         </div>
         <div class="mt-3">
           Copyright @ 2020 MNP, Inc
