add category screen

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -23,7 +23,7 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
       <div class="container">
-        <a href="#" class="navbar-branch">
+        <a href="/" class="navbar-branch">
           <img src="/assets/images/logo.svg" width="160px" />
         </a>
         <button
@@ -54,7 +54,7 @@
                 >Categories</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdownCategory">
-                <a class="dropdown-item" href="#">Mobile</a>
+                <a class="dropdown-item" href="/category">Mobile</a>
                 <a class="dropdown-item" href="#">web</a>
               </div>
             </li>
