--- a/views/instructor/addLesson.ejs
+++ b/views/instructor/addLesson.ejs
@@ -105,57 +105,25 @@
 
 
 
-    <!-- Courses -->
-    <div class="container mt-5 mb-5">
-        <form 2="/addCourse" method="post" id="formCourse">
-          <div class="form-group">
-            <label for="courseName">Course name</label>
-            <input type="text" class="form-control" id="courseName" placeholder="How to carry daxua 0/8/1?">
-          </div>
-          <form>
-              <div class="form-group">
-                <label for="courseImage">Course image</label>
-                <input type="file" class="form-control-file" id="courseImage">
-              </div>
-          </form>
-          <div class="form-group">
-            <label for="category">Category</label>
-            <select class="form-control" id="category">
-              <% for(let i=0;i<category.length;i++) {%>
-              <option><%=category[i].categoryName%></option>
-              <%}%>
-            </select>
-          </div>
-          
-          <div class="form-group">
-            <label for="shortDescription">Short description</label>
-            <textarea class="form-control" id="shortDescription" rows="3"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="shortDescription">Full description</label>
-            <textarea class="form-control" id="shortDescription" rows="3"></textarea>
-          </div>
-          <div class="form-group">
-              <label for="price">Price</label>
-              <input type="text" class="form-control" id="price" placeholder="699">
-          </div>
-          <div class="form-group">
-            <label for="concurency">Concurency</label>
-            <input type="text" class="form-control" id="Concurency" placeholder="USD">
-          </div>
-          
-          <button id="add-chapter-btn" type="button" class="btn btn-primary" onClick="window.open('/instructor/addChapter');"  >Add Chapter</button>
-          <!-- <button class="button" onClick="window.open('http://www.example.com');">
-            <span class="icon">Open</span>
-       </button> -->
-        </form>
-        <div class="d-flex justify-content-center">
-          <input class="btn btn-primary " type="submit" form="formCourse" value="Submit this course">
-
+    <div id="addLesson" class="container mt-5 mb-5"> 
+      <form action="/addLesson" method="post" id="formLesson">
+        <div class="form-group">
+        <label for="lessonName">Lesson name</label>
+        <input type="text" class="form-control" id="lessonName" placeholder="How to carry daxua 0/8/1?">
         </div>
-      </div>
-
-    
+        <div class="form-group">
+        <label for="shortDescription">Short description</label>
+        <textarea class="form-control" id="shortDescription" rows="3"></textarea>
+        </div>
+        <form>
+        <div class="form-group">
+            <label for="uploadVideo">Upload video</label>
+            <input type="file" class="form-control-file" id="uploadVideo">
+        </div>
+        </form>
+      </form>
+      <input class="btn btn-primary" type="submit" form="formLesson" value="Submit this lesson">
+    </div>
     <!-- Footer -->
     <div class="container-fluid footer">
       <div class="row">
@@ -209,7 +177,48 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
+    <script>
+        addFunc = (str) => {
+          let upcase = (str === "chapter") ?"Chapter":"Lesson";
+          let id = "add" + upcase;
+          let btnid = "add-" + str + "-btn" ;
+          let obj = document.getElementById(id)
+          let btnAdd = document.getElementById(btnid)
+
+          if (obj.style.display === "none")
+          {
+            obj.style.display = "block";
+            btnAdd.style.background = "red"
+            btnAdd.innerHTML = "Cancle"
+          } else {
+            obj.style.display = "none";
+            btnAdd.style.background = "#007BFF"
+            btnAdd.innerHTML = "Add " + upcase;
+          }
+
+        }
+        // $("#add-chapter-btn").click(function(){
+        //   let chapter = document.getElementById("addChapter")
+
+        //   if (chapter.style.display === "none")
+        //   {
+        //     chapter.style.display = "block";
+        //     let btnAdd = document.getElementById("add-chapter-btn")
+        //     btnAdd.style.background = "red"
+        //     btnAdd.innerHTML = "Cancle"
+        //   } else {
+        //     chapter.style.display = "none";
+        //     let btnAdd = document.getElementById("add-chapter-btn")
+        //     btnAdd.style.background = "#007BFF"
+        //     btnAdd.innerHTML = "Add Chapter"
+        //   }
+          
+        // });
+        // $("#add-lesson-btn").click(function(){
+        //   document.getElementById("addLesson").style.display = "block";
+        // });
+
+    </script>
   </body>
 </html>
 
