--- a/views/instructor/addCourse.ejs
+++ b/views/instructor/addCourse.ejs
@@ -64,63 +64,55 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <% if(typeof user !== 'undefined' ) { %>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fas fa-shopping-cart"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa fa-heart" aria-hidden="true"></i>
-                </a>
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="dropdownUser"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                  ><%= user.username %></a
-                >
-                <div class="dropdown-menu" aria-labelledby="dropdownUser">
-                  <a class="dropdown-item" href="#">My Profile</a>
-                  <a class="dropdown-item" href="#">Log out</a>
-                </div>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fas fa-shopping-cart"></i>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="dropdownUser"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+                ><%= user.username %></a
+              >
+              <div class="dropdown-menu" aria-labelledby="dropdownUser">
+                <a class="dropdown-item" href="#">My Profile</a>
+                <a class="dropdown-item" href="#">Log out</a>
+              </div>
+            </li>
             <% } else { %>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  Login
-                </a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Login </a>
+            </li>
             <% } %>
-            
-            
           </ul>
         </div>
       </div>
     </nav>
 
-
-
     <!-- Courses -->
     <div class="container mt-5 mb-5">
-        <form 2="/addCourse" method="post" id="formCourse">
+      <form action="/instructor/addCourse" method="post" enctype="multipart/form-data">
           <div class="form-group">
             <label for="courseName">Course name</label>
-            <input type="text" class="form-control" id="courseName" placeholder="How to carry daxua 0/8/1?">
+            <input type="text" class="form-control" id="courseName" placeholder="How to carry daxua 0/8/1?" name="courseName">
           </div>
-          <form>
-              <div class="form-group">
-                <label for="courseImage">Course image</label>
-                <input type="file" class="form-control-file" id="courseImage">
-              </div>
-          </form>
+          <div class="form-group">
+            <label for="courseImage">Course image</label>
+            <input type="file" class="form-control-file" id="courseImage" name = "image">
+          </div>
           <div class="form-group">
             <label for="category">Category</label>
-            <select class="form-control" id="category">
+            <select class="form-control" id="category" name="category">
               <% for(let i=0;i<category.length;i++) {%>
               <option><%=category[i].categoryName%></option>
               <%}%>
@@ -129,75 +121,70 @@
           
           <div class="form-group">
             <label for="shortDescription">Short description</label>
-            <textarea class="form-control" id="shortDescription" rows="3"></textarea>
+            <textarea class="form-control" id="shortDescription" rows="3" name = "shortDescription"></textarea>
           </div>
           <div class="form-group">
-            <label for="shortDescription">Full description</label>
-            <textarea class="form-control" id="shortDescription" rows="3"></textarea>
+            <label for="fullDescription">Full description</label>
+            <textarea class="form-control" id="fullDescription" rows="3" name = "fullDescription"></textarea>
           </div>
           <div class="form-group">
               <label for="price">Price</label>
-              <input type="text" class="form-control" id="price" placeholder="699">
+              <input type="text" class="form-control" id="price" placeholder="699" name = "price">
           </div>
           <div class="form-group">
             <label for="concurency">Concurency</label>
-            <input type="text" class="form-control" id="Concurency" placeholder="USD">
+            <input type="text" class="form-control" id="concurency" placeholder="USD" name = "concurency">
           </div>
           
-          <button id="add-chapter-btn" type="button" class="btn btn-primary" onClick="window.open('/instructor/addChapter');"  >Add Chapter</button>
-          <!-- <button class="button" onClick="window.open('http://www.example.com');">
-            <span class="icon">Open</span>
-       </button> -->
-        </form>
-        <div class="d-flex justify-content-center">
-          <input class="btn btn-primary " type="submit" form="formCourse" value="Submit this course">
+      
+          <input type="submit" class ="btn btn-primary" value="Submit this course"/>
+      </form>
+      <!-- <div class="d-flex justify-content-center">
+          <input class="btn btn-primary" type="submit" form="formCourse" value="Submit this course">
+        </div> -->
+        <!-- <form action="/instructor/addCourse" method="post">
+          <input type="text" name="field">
+          <input type="submit">
+          <div class="form-group">
+            <label for="courseName">Course name</label>
+            <input type="text" class="form-control" id="courseName" placeholder="How to carry daxua 0/8/1?">
+          </div>
+          <div class="form-group">
+            <label for="courseImage">Course image</label>
+            <input type="file" class="form-control-file" id="courseImage">
+          </div>
+        </form> -->
+    </div>
 
-        </div>
-      </div>
-
-    
     <!-- Footer -->
     <div class="container-fluid footer">
       <div class="row">
         <ul class="col list-group">
-          <li class="list-group"><a href="#">
-            MNP for Business</a></li>
-          <li class="list-group"><a href="#">
-            Teach on Udemy</a></li>
-          <li class="list-group"><a href="#">
-            About us</a></li>
-          <li class="list-group"><a href="#">
-            Contact us</a></li>
+          <li class="list-group"><a href="#"> MNP for Business</a></li>
+          <li class="list-group"><a href="#"> Teach on Udemy</a></li>
+          <li class="list-group"><a href="#"> About us</a></li>
+          <li class="list-group"><a href="#"> Contact us</a></li>
         </ul>
         <ul class="col list-group">
-          <li class="list-group"><a href="#">
-            Careers</a></li>
-          <li class="list-group"><a href="#">
-            Blog</a></li>
-          <li class="list-group"><a href="#">
-            Help and Support</a></li>
-          <li class="list-group"><a href="#">
-            Affiliate</a></li>
+          <li class="list-group"><a href="#"> Careers</a></li>
+          <li class="list-group"><a href="#"> Blog</a></li>
+          <li class="list-group"><a href="#"> Help and Support</a></li>
+          <li class="list-group"><a href="#"> Affiliate</a></li>
         </ul>
         <ul class="col list-group">
-          <li class="list-group"><a href="#">
-            Terms</a></li>
-          <li class="list-group"><a href="#">           
-            Privacy policy and cookie policy</a></li>
-          <li class="list-group"><a href="#">
-            Sitemap</a></li>
-          <li class="list-group"><a href="#">
-            Featured courses</a></li>
+          <li class="list-group"><a href="#"> Terms</a></li>
+          <li class="list-group">
+            <a href="#"> Privacy policy and cookie policy</a>
+          </li>
+          <li class="list-group"><a href="#"> Sitemap</a></li>
+          <li class="list-group"><a href="#"> Featured courses</a></li>
         </ul>
       </div>
       <div class="row footer-logo d-flex justify-content-between">
         <div>
-          <img src="/assets/images/logo-images.svg" width="50px">
+          <img src="/assets/images/logo-images.svg" width="50px" />
         </div>
-        <div class="mt-3">
-          Copyright @ 2020 MNP, Inc
-        </div>
-
+        <div class="mt-3">Copyright @ 2020 MNP, Inc</div>
       </div>
     </div>
 
@@ -209,7 +196,5 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    
   </body>
 </html>
-
