--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -85,12 +85,12 @@
                 >
                 <div class="dropdown-menu" aria-labelledby="dropdownUser">
                   <a class="dropdown-item" href="#">My Profile</a>
-                  <a class="dropdown-item" href="#">Log out</a>
+                  <a class="dropdown-item" href="/logout">Log out</a>
                 </div>
               </li>
             <% } else { %>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/login">
                   Login
                 </a>
               </li>
@@ -301,5 +301,9 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+      
+    </script>
   </body>
 </html>
