--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -102,28 +102,16 @@
   <!-- Main content -->
   <div class="container signup-container d-flex justify-content-center">
     <div class="signup text-center">
-      <div>Sign Up</div>
-      <span>Already a memeber? <a href="/login">Log In</a></span>
-      <form method="POST" action="/authentication/signup" id="signUpForm">
-        <div class="form-group">
-          <input type="text" class="form-control" name="name" placeholder="Username">
-        </div>
+      <div>Login</div>
+      <span>Not a memeber? <a href="/signup">Sign Up</a></span>
+      <form method="POST" action="/authentication/login" id="signUpForm">
         <div class="form-group">
           <input type="email" class="form-control" name="email" placeholder="Email">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="first_name" placeholder="First name">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" name="last_name" placeholder="Last name">
-        </div>
-        <div class="form-group">
           <input type="password" class="form-control" name="password" id="password" placeholder="Password">
         </div>
-        <div class="form-group">
-          <input type="password" class="form-control" name="re_password" id="re_password" placeholder="Confirm password">
-        </div>
-        <button type="submit" class="btn btn-primary w-50 rounded-pill">Sign Up</button>
+        <button type="submit" class="btn btn-primary w-50 rounded-pill">Login</button>
       </form>
     </div>
   </div>
@@ -205,26 +193,12 @@
         onkeyup: false,
         onclick: false,
         rules: {
-          "name": {
-            required: true
-          },
-          "email":{
+          "email": {
             required: true,
             email: true
           },
-          "first_name": {
-            required: true
-          },
-          "last_name": {
-            required: true
-          },
           "password": {
             required: true,
-            minlength: 8
-          },
-          "re_password": {
-            equalTo: "#password",
-            minlength: 8
           }
         }
       })
