--- a/views/instructor/addChapter.ejs
+++ b/views/instructor/addChapter.ejs
@@ -107,7 +107,7 @@
 
     <!-- add chapter -->
     <div  id="addChapter"class="container mt-5 mb-5">
-      <form action="/instructor/addChapter" method="post" id="formChapter">
+      <form action="/instructor/addChapter/:" method="post" id="formChapter">
         <div class="form-group">
           <label for="chapterName">Chapter name</label>
           <input type="text" class="form-control" id="chapterName" placeholder="How to carry daxua 0/8/1?" name = "chapterName">
